# pypagate

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pytest.yml  typecheck.yml
docs/source/: api.rst  basics.rst  conf.py  index.rst  listening.rst  universes.rst
src/pypagate/: __init__.py  math.py
src/pypagate/source/: __init__.py
tests/: test_basic.py  test_source.py
